--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -26,6 +26,7 @@
               <%= @hotdeal.impressionist_count(:filter=>:all) %> Views |
               <%= @hotdeal.created_at.strftime("%d. %B.") %><br />
               <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01">( Was: <%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">| <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+              <%= render 'hotdeals/body_sns' %>
             </div>
           <% end %>
         </div>
@@ -33,9 +34,10 @@
          <div class="hotdeal_inner">
            <h2 class="title"><%= @hotdeal.h_title %></h2>
 
+
            <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
 
-          
+           <!-- <p class="top_line">Amazon is offering "<span><%= @hotdeal.h_title %></span>" for only <em><%= number_to_currency(@hotdeal.h_price) %></em></p> -->
 
            <div class="extra_info">
             <% if @hotdeal.h_spare_08.present? %>
