--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -13,6 +13,9 @@
 .show_wrap .show_box .show_inner .hotdeal_inner h2{font-weight:500;line-height:1.2;font-size:18px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2}
 
 .show_wrap .show_box .show_inner .hotdeal_inner p{font-size:15px;font-weight:400;margin:15px 0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .top_line{}
+.show_wrap .show_box .show_inner .hotdeal_inner .top_line span{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:300px;overflow:hidden;display:inline-block;vertical-align:middle;font-weight:500;}
+.show_wrap .show_box .show_inner .hotdeal_inner .top_line em{font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
@@ -95,7 +98,7 @@
 .deals_card h3{font-size:20px;font-weight:700;margin-bottom:10px;z-index:101;}
 .deals_card h3 a{text-decoration:none;color:#000;}
 .deals_card p{font-size:0.9em;letter-spacing:1px;font-weight:400;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
-.deals_card p a{text-decoration:none;color:#000;}
+.deals_card p a{text-decoration:none;color:#000;word-break:break-word;}
 .deals_card .price{font-weight:500;font-size:1.5em;line-height:48px;letter-spacing:1px;}
 .deals_card .price em{margin-right:5px;opacity:0.5;font-size:0.9em;text-decoration:line-through;}
 .deals_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
