--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -38,7 +38,7 @@
 .show_wrap .show_box .show_img .mark{width:50px;background:#000;font-size:13px;padding:7px;border-radius:10px;line-height:1.1;position:absolute;top:0;left:0;}
 .show_wrap .show_box .show_img .mark span{text-align:center;color:#fff;letter-spacing:3.1px;display:block;}
 .show_wrap .show_box .show_img .mark em{display:block;text-align:center;font-size:10px;color:#fff;}
-.show_wrap .show_box .show_img .admin a{background:none;color:#000;}
+.show_wrap .show_box .show_img .admin a{background:none;color:#fff;background:#000;padding:1px 5px;}
 .hotdeal_related{width:1000px;margin:30px auto 0 auto;font-family: 'Montserrat', sans-serif;}
 .hotdeal_related p{text-align:center;font-size:30px;margin-bottom:20px;}
 
