--- a/app/views/hotdeals/_body_sns.html.erb
+++ b/app/views/hotdeals/_body_sns.html.erb
@@ -1,14 +1,11 @@
-<ul class="social">
-  <a class="facebook" id="shareFB" href="https://www.facebook.com/sharer/sharer.php?u=<%= url_for([@hotdeal, { 
-   only_path: false }]) %>&t=<%= @hotdeal.h_title %>"
-   onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"   target="_blank" title="Share on Facebook"><li><i class="fa fa-facebook"></i><span>Share on Facebook</span></a></li></a>
-  <script type="text/javascript">document.getElementById("shareFB").setAttribute("href", "https://www.facebook.com/sharer/sharer.php?u=" + document.URL);
-  </script>
+<a class="facebook" id="shareFB" href="https://www.facebook.com/sharer/sharer.php?u=<%= url_for([@hotdeal, { 
+ only_path: false }]) %>&t=<%= @hotdeal.h_title %>"
+ onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"   target="_blank" title="Share on Facebook"><!-- <li><i class="fa fa-facebook"></i> --><span>Facebook</span></a> | 
+<script type="text/javascript">document.getElementById("shareFB").setAttribute("href", "https://www.facebook.com/sharer/sharer.php?u=" + document.URL);</script>
 
-  <a class="twitter" href="https://twitter.com/share?url=<%= url_for([@hotdeal, { 
-   only_path: false }]) %>&via=ohigottabuythis&text=<%= @hotdeal.h_title %>"
-   onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
-   target="_blank" title="Share on Twitter">
-   <li><i class="fa fa-twitter"></i><span>Share on Twitter</span></a></li>
-  </a>
-</ul>
+<a class="twitter" href="https://twitter.com/share?url=<%= url_for([@hotdeal, { 
+only_path: false }]) %>&via=ohigottabuythis&text=<%= @hotdeal.h_title %>"
+onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
+target="_blank" title="Share on Twitter">
+<span>Twitter</span>
+</a>
