--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -22,7 +22,8 @@
         <h2>Take the best deals with promo codes<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
         <%= render 'promocodes_days/note_wadiz' %>
         <%= render 'shared/amz_search' %>
-        <div class="sort_box clearfix">
+        
+        <!-- <div class="sort_box clearfix">
           <ul>
             <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
@@ -30,7 +31,7 @@
             <li><a href="#" class="pure-button sort3">Sale High</a></li>
             <li><a href="#" class="pure-button sort4">Sale Low</a></li>
           </ul>
-        </div>
+        </div> -->
         
         <div class="card_wrap sort-list">
           
