--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -30,7 +30,7 @@
 
   .codes .lt_cnt .most_h_wrap{margin-top:10px;padding:5px;border:1px solid #ccc;border-radius:7px;}
   .codes .lt_cnt .most_h_wrap .most_h_tit{font-size:20px;}
-  .codes .lt_cnt .most_h_wrap .bottom_line{background:#000;padding:7px;text-align:center;font-family: 'Anton', sans-serif;}
+  .codes .lt_cnt .most_h_wrap .bottom_line{background:#000;padding:15px 0;text-align:center;font-family: 'Anton', sans-serif;}
   .codes .lt_cnt .most_h_wrap .bottom_line a{text-decoration:none;color:#fff;display:block;font-size:20px;letter-spacing:2px;}
   .codes .lt_cnt .most_hotdeal .numbering{display:block;background:#000;color:#fff;text-align:center;width:10%;border-radius:7px;}
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
@@ -73,6 +73,7 @@
   .codes .rt_cnt .sort_box ul li a:hover{background:#000;color:#fff;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;}
   .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
+  .codes .rt_cnt .updating_m{display:none;}
 
   .codes .deals_description{margin-bottom:15px;color:#616161;}
   .codes .card_wrap{margin:20px 0 0 0;}
@@ -197,7 +198,7 @@
 
   .codes .lt_cnt .most_h_wrap{margin-top:10px;padding:5px;border:1px solid #ccc;border-radius:7px;}
   .codes .lt_cnt .most_h_wrap .most_h_tit{font-size:20px;}
-  .codes .lt_cnt .most_h_wrap .bottom_line{background:#000;padding:7px;text-align:center;font-family: 'Anton', sans-serif;}
+  .codes .lt_cnt .most_h_wrap .bottom_line{background:#000;padding:15px 0;text-align:center;font-family: 'Anton', sans-serif;}
   .codes .lt_cnt .most_h_wrap .bottom_line a{text-decoration:none;color:#fff;display:block;font-size:20px;letter-spacing:2px;}
   .codes .lt_cnt .most_hotdeal .numbering{display:block;background:#000;color:#fff;text-align:center;width:10%;border-radius:7px;}
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
@@ -279,8 +280,10 @@
   .codes .card_wrap .card .deal_btn em{display:none;}
   .codes .card_wrap .card .deal_btn em.stock_m{color:#ff4d4d;text-align:left;margin-left:7px;display:block;margin-bottom:-20px;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
-  .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;}
+  .codes .rt_cnt .updating{display:none;font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
+  .codes .rt_cnt .updating_m{display:block;text-align:center;margin:-15px 0 15px 0;}
+  .codes .rt_cnt .updating_m a{padding:15px 0;}
 
 
   .codes .card_wrap .card .inner>.prime_more>a{color:#08f;font-weight:bold;}
