--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -37,11 +37,13 @@
         <div class="card_wrap sort-list">
           <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div>
           <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <p class="updating updating_m"><a href="/promocodes">GO TO DISCOVER THE BEST DEALS MORE</a></h2>
           <%= render 'deals/body_hotdeals' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
 
         <!-- Note for mobile -->
+        <p class="updating updating_m"><a href="/promocodes">GO TO DISCOVER THE BEST DEALS MORE</a></h2>
         <div class="lt_cnt note_mobile">
           <h2>Daily Deals of Amazon</h2>
           <%= render 'deals/notes_bestdeals' %>
