--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -23,8 +23,9 @@
               <%= link_to 'Back', promocodes_path %> |
               <%= link_to 'Edit', edit_promocode_path(@promocode) %> |
               <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %> |
+              <%= render 'promocodes/body_sns' %><br>
               <%= @promocode.impressionist_count(:filter=>:all) %> Views |
-              <%= @promocode.created_at.strftime("%d. %B.") %><br>
+              <%= @promocode.created_at.strftime("%d. %B.") %>
               <% running_total = 0 %>
               <% running_total =  @promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26 %>
               <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF with Promo Code)</span></p>
