--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -196,6 +196,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 /* Deals&Gadgets sub menu */
 .sub_nav{/*margin-top:260px;*//*margin-top:175px;*/font-family: 'Anton', sans-serif;}
 .sub_nav .sub_nav_pc>ul>li{float:left;margin-right:30px;/*width:150px;*//*text-align:center;*/}
+.sub_nav .sub_nav_pc>ul>li.more{margin-left:-25px;}
 /*.sub_nav .sub_nav_pc>ul>li.coumos1{width:135px;}
 .sub_nav .sub_nav_pc>ul>li.coumos{width:275px;}*/
 .sub_nav .shoes_nav_pc{margin:0;}
