--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -11,7 +11,9 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
           <li class="coumos1"><a href="/deals/bestdeals">Daily Deals</a></li>
-          <li><a href="/deals/promo_codes">Promo Codes</a></li>
+          <li class="more"><a href="/hotdeals">[ More Deals ]</a></li>
+          <li><a href="/deals/promo_codes">Daily Codes</a></li>
+          <li class="more"><a href="/promocodes">[ More Codes ]</a></li>
           <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
           <!-- <li><a href="/deals/picked_deals">Best Deals</a></li> -->
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
@@ -23,7 +25,9 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <li><a href="/deals/bestdeals">DAILY DEALS,</a></li>
-        <li><a href="/deals/promo_codes">PROMO CODES,</a></li>
+        <li><a href="/hotdeals">[ MORE DEALS ],</a></li>
+        <li><a href="/deals/promo_codes">DAILY CODES,</a></li>
+        <li><a href="/promocodes">[ MORE CODES ],</a></li>
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
