--- a/app/views/promocodes/_header.html.erb
+++ b/app/views/promocodes/_header.html.erb
@@ -3,10 +3,10 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li class="coumos1"><a href="/deals/bestdeals">Daily Deals</a></li>
-        <li class="more"><a href="/hotdeals">[ More Deals ]</a></li>
-        <li><a href="/deals/promo_codes">Daily Codes</a></li>
-        <li class="more"><a href="/promocodes">[ More Codes ]</a></li>
+        <li><a href="/hotdeals">More Deals</a></li>
+        <li class="coumos1 more"><a href="/deals/bestdeals">[ Daily Deals ]</a></li>
+        <li><a href="/promocodes">More Codes</a></li>
+        <li class="more"><a href="/deals/promo_codes">[ Daily Codes ]</a></li>
         <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
         <li class="coumos" ><a href="/deals/promotions">Coupon Codes & Promotions</a></li>
         <li><a href="/deals/quick_search">Quick Search</a></li>
@@ -17,10 +17,10 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
-        <li><a href="/deals/bestdeals">DAILY DEALS,</a></li>
-        <li><a href="/hotdeals">[ MORE DEALS ],</a></li>
-        <li><a href="/deals/promo_codes">DAILY CODES,</a></li>
-        <li><a href="/promocodes">[ MORE CODES ],</a></li>
+        <li><a href="/hotdeals">MORE DEALS,</a></li>
+        <li><a href="/deals/bestdeals">[ DAILY DEALS ],</a></li>
+        <li><a href="/promocodes">MORE CODES,</a></li>
+        <li><a href="/deals/promo_codes">[ DAILY CODES ],</a></li>
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
