--- a/app/views/deals/_body_most_rev_ver2.html.erb
+++ b/app/views/deals/_body_most_rev_ver2.html.erb
@@ -10,7 +10,7 @@
   <section>
 
       <div class="boxes box_electronic">
-       <h2 class="filter-node top_category" data-filter='["","!@none"]'>Electronics</h2>
+       <h2 class="filter-node top_category" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2NcdpDW">Electronics</a></h2>
        <div class="filter-node" data-filter='["","Power Bank"]'><a target="_blank" href="https://amzn.to/324B8vv" class="overlay-container" data-overlay-text="Power Bank">Power Bank</a></div>
 
        <div class="filter-node" data-filter='["","car mount holder"]'><a target="_blank" href="https://amzn.to/2KUFLlX" class="overlay-container" data-overlay-text="car mount holder">car mount holder</a></div>
@@ -72,7 +72,7 @@
       </div><!--./box_electronic-->
 
       <div class="boxes box_accessories">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Electronics Accessories</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2Nd6Ssp">Electronics Accessories</a></h2>
        <div class="filter-node" data-filter='["","Audio & Video Accessories"]'><a target="_blank" href="https://amzn.to/2VOGhpy" class="overlay-container" data-overlay-text="Audio & Video Accessories">Audio & Video Accessories</a></div>
 
        <div class="filter-node" data-filter='["","Camera & Photo Accessories"]'><a target="_blank" href="https://amzn.to/35FeFrs" class="overlay-container" data-overlay-text="Camera & Photo Accessories">Camera & Photo Accessories</a></div>
@@ -109,7 +109,7 @@
       </div><!--./box_accessories-->
 
       <div class="boxes box_appliances">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Appliances</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2qM1zc0">Appliances</a></h2>
        <div class="filter-node" data-filter='["","Refrigerators, Freezers & Ice Makers"]'><a target="_blank" href="https://amzn.to/35GCXBn" class="overlay-container" data-overlay-text="Refrigerators, Freezers & Ice Makers">Refrigerators, Freezers & Ice Makers</a></div>
 
        <div class="filter-node" data-filter='["","Laundry Appliances"]'><a target="_blank" href="https://amzn.to/35S3bkC" class="overlay-container" data-overlay-text="Laundry Appliances">Laundry Appliances</a></div>
@@ -145,7 +145,7 @@
 
 
       <div class="boxes box_home">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Home & Living</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2pTn36e">Home & Living</a></h2>
 
        <div class="filter-node" data-filter='["","Bath"]'><a target="_blank" href="https://amzn.to/2nTCY3P" class="overlay-container" data-overlay-text="Bath">Bath(home & living)</a></div>
        
@@ -184,7 +184,7 @@
 
 
       <div class="boxes box_kitchen">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Kitchen & Dining</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2pdMDCU">Kitchen & Dining</a></h2>
 
         <div class="filter-node" data-filter='["","Coffee Makers"]'><a target="_blank" href="https://amzn.to/2ZaJMf3" class="overlay-container" data-overlay-text="Coffee Makers">Coffee Makers</a></div>
 
@@ -226,7 +226,7 @@
 
 
       <div class="boxes box_travel">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Travel</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2pezoC5">Travel</a></h2>
        <div class="filter-node" data-filter='["","backpack"]'><a target="_blank" href="https://amzn.to/2Zv35uT" class="overlay-container" data-overlay-text="backpack">backpack</a> </div>
 
        <div class="filter-node" data-filter='["","Travel Steamers"]'><a target="_blank" href="https://amzn.to/2KR1hIy" class="overlay-container" data-overlay-text="Travel Steamers">Travel Steamers</a></div>
@@ -241,7 +241,7 @@
       </div><!--./box_travel-->
 
       <div class="boxes box_outdoor">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Outdoor</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/349EOgF">Outdoor</a></h2>
        <div class="filter-node" data-filter='["","Outdoor Clothing"]'><a target="_blank" href="https://amzn.to/2oGBMBu" class="overlay-container" data-overlay-text="Outdoor Clothing">Outdoor Clothing</a></div>
 
        <div class="filter-node" data-filter='["","Camping & Hiking"]'><a target="_blank" href="https://amzn.to/2MlCjl4" class="overlay-container" data-overlay-text="Camping & Hiking">Camping & Hiking</a></div>
@@ -251,7 +251,7 @@
 
 
       <div class="boxes box_sports">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Sports & Fitness</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/344Mz7w">Sports & Fitness</a></h2>
 
        <div class="filter-node" data-filter='["","Cycling"]'><a target="_blank" href="https://amzn.to/2J0VXAP" class="overlay-container" data-overlay-text="Cycling">Cycling</a></div>
 
@@ -297,7 +297,7 @@
     
       
       <div class="boxes box_tool">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Tools &Home Improvement</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2JnGIlL">Tools &Home Improvement</a></h2>
 
        <div class="filter-node" data-filter='["","Appliances"]'><a target="_blank" href="https://amzn.to/35HbLCz" class="overlay-container" data-overlay-text="Appliances">Appliances</a></div>
 
@@ -330,7 +330,7 @@
       </div><!--./box_tool-->
 
       <div class="boxes box_garden">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Patio, Lawn & Garden</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2NfbC0H">Patio, Lawn & Garden</a></h2>
        <div class="filter-node" data-filter='["","Gardening"]'><a target="_blank" href="https://amzn.to/2PJPksF" class="overlay-container" data-overlay-text="Gardening">Gardening</a></div>
 
        <div class="filter-node" data-filter='[""," Décor"]'><a target="_blank" href="https://amzn.to/2MW4skp" class="overlay-container" data-overlay-text=" Décor">Outdoor Décor</a></div>
@@ -359,7 +359,7 @@
       </div><!--./box_garden-->
 
       <div class="boxes box_beauty">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Beauty & Health</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/31OvvB4">Beauty & Health</a></h2>
         <div class="filter-node" data-filter='["","bath"]'><a target="_blank" href="https://amzn.to/2HtGlFj" class="overlay-container" data-overlay-text="bath">bath(beauty & health)</a> </div>
 
         <div class="filter-node" data-filter='["","Make up"]'><a target="_blank" href="https://amzn.to/2ZBRuKo" class="overlay-container" data-overlay-text="Make up">Make up</a></div>
@@ -384,7 +384,7 @@
       </div><!--./box_beauty-->
 
       <div class="boxes box_fashion">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Fashion</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2p5AT5H">Fashion</a></h2>
        <div class="filter-node" data-filter='["","Women Fashion"]'><a target="_blank" href="https://amzn.to/2PJ0eie" class="overlay-container" data-overlay-text="Women Fashion">Women Fashion</a></div>
 
         <div class="filter-node" data-filter='["","Men Fashion"]'><a target="_blank" href="https://amzn.to/2NVMnSW" class="overlay-container" data-overlay-text="Men Fashion">Men Fashion</a></div>
@@ -397,7 +397,7 @@
       </div><!--./box_fashion-->
 
       <div class="boxes box_game">
-        <h2 class="filter-node" data-filter='["","!@none"]'>Toys & Games</h2>
+        <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2BLr5QM">Toys & Games</a></h2>
         <div class="filter-node" data-filter='["","Gaming Keyboards"]'><a target="_blank" href="https://amzn.to/2HAuBB5" class="overlay-container" data-overlay-text="Gaming Keyboards">Gaming Keyboards</a></div>
 
         <div class="filter-node" data-filter='["","Computer Monitors"]'><a target="_blank" href="https://amzn.to/2L5yezE" class="overlay-container" data-overlay-text="Computer Monitors">Computer Monitors</a></div>
@@ -432,7 +432,7 @@
       </div><!--./box_game-->
 
       <div class="boxes box_pet">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Pet Supplies</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2BLrbI8">Pet Supplies</a></h2>
        <div class="filter-node" data-filter='["","Dogs"]'><a target="_blank" href="https://amzn.to/2ZQ9l0a" class="overlay-container" data-overlay-text="Dogs">Dogs</a></div>
 
         <div class="filter-node" data-filter='["","Cats"]'><a target="_blank" href="https://amzn.to/2LirS1b" class="overlay-container" data-overlay-text="Cats">Cats</a></div>
@@ -443,7 +443,7 @@
 
 
       <div class="boxes box_book">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Kindle & Books</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2Nig3ry">Kindle & Books</a></h2>
 
        <div class="filter-node" data-filter='["Categories","Categories"]'><a target="_blank" href="https://amzn.to/327utjY" class="overlay-container" data-overlay-text="Kindle">Kindle</a></div>
 
@@ -462,7 +462,7 @@
 
 
       <div class="boxes box_office">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Offce & School</h2>
+       <h2 class="filter-node" data-filter='["","!@none"]'><a target="_blank" href="https://amzn.to/2JoPVu6">Offce & School</a></h2>
        <div class="filter-node" data-filter='["","Core Office Products"]'><a target="_blank" href="https://amzn.to/328WeJe" class="overlay-container" data-overlay-text="Core Office Products">Core Office Products</a></div>
 
        <div class="filter-node" data-filter='["","Printers"]'><a target="_blank" href="https://amzn.to/324iCU3" class="overlay-container" data-overlay-text="Printers">Printers</a></div>
