--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -11,17 +11,17 @@
        </div>
 
        <div class="form_input">
-        <%= f.input :gg_from, label: 'Seller' %>
-        <%= f.input :gg_spare_01, label: 'Retailer' %>
-        <%= f.input :gg_title, label: 'Title' %>
-        <%= f.input :gg_spare_05, label: 'Image_title' %>
-        <%= f.input :gg_intro, label: 'Intro' %>
-        <%= f.input :gg_option_04, label: 'Keywords' %>
-        <%= f.input :gg_img, label: 'Image URL' %>
-        <%= f.input :gg_url, label: 'Product URL' %>
-        <%= f.input :gg_aprice, label: 'Current Price' %>
-        <%= f.input :gg_option_02, label: 'Discover More' %>
-        <%= f.input :gg_youtube01, label: 'Youtube First' %>
+        <%= f.input :gg_img, label: 'Image URL', placeholder: 'Image URL' %>
+        <%= f.input :gg_url, label: 'Product URL', placeholder: 'Product URL' %>
+        <%= f.input :gg_title, label: 'Title', placeholder: 'Title' %>
+        <%= f.input :gg_spare_05, label: 'Image_title', placeholder: 'Image_title' %>
+        <%= f.input :gg_from, label: 'Seller', placeholder: 'Seller' %>
+        <%= f.input :gg_spare_01, label: 'Retailer', placeholder: 'Retailer' %>
+        <%= f.input :gg_intro, label: 'Intro', placeholder: 'Intro' %>
+        <%= f.input :gg_option_04, label: 'Keywords', placeholder: 'Keywords' %>
+        <%= f.input :gg_aprice, label: 'Current Price', placeholder: 'Current Price' %>
+        <%= f.input :gg_option_02, label: 'Discover More', placeholder: 'Discover More' %>
+        <%= f.input :gg_youtube01, label: 'Youtube First', placeholder: 'Youtube' %>
        </div>
           
        <div class="form_btn">
